--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,12 @@ spring.mvc.hiddenmethod.filter.enabled=true
 
 spring.security.user.name=test@test.test
 spring.security.user.password=test
+
+
+spring.mail.host=sandbox.smtp.mailtrap.io
+spring.mail.port=587
+spring.mail.username=1e59bb580a152f
+spring.mail.password=76305956b1e6f1
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
